--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,14 +1,13 @@
 /* Global Style */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    color: #000;
+body {
+  color: #000;
 }
-
 
 /* Dashboard Style */
 
@@ -148,14 +147,242 @@ body{
   margin-bottom: 1.5rem;
 }
 
-
 /* Login Style */
 
-.login-main-div{
-    margin-top: 70px;
-    height: 90vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.login-main-div {
+  margin-top: 50px;
+}
+
+.login-background-container {
+  background-image: url("/images/login-image.jpeg");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: -1;
+}
+
+.login-overlay-style {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
+}
+
+.login-intro-text {
+  z-index: 999;
+  color: #fff;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.login-intro-text h1 {
+  font-size: 60px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.login-intro-text h3 {
+  padding: 0rem 15rem;
+  line-height: 1.6;
+  text-align: center;
+}
+
+.login-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-form-container {
+  min-width: 700px;
+  padding: 1.5rem;
+  margin: 4rem 0rem;
+  background-color: #fff;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  border: 2.5px solid #000;
+  border-radius: 10px;
+}
+
+.login-form-group {
+  margin-bottom: 1.5rem;
+}
+
+.login-form-group label {
+  font-weight: bold;
+}
+
+.login-form-group input {
+  border: 1px solid #ced4da;
+  border-radius: 5px;
+  padding: 0.5rem;
+}
+
+/* G2 Page Style */
+
+.background-container {
+  background-image: url("/images/drive-test-bg.png");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: -1;
+}
+
+.overlay-style {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: -1;
+}
+
+.intro-text {
+  z-index: 999;
+  color: #fff;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.intro-text h1 {
+  font-size: 60px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.intro-text h3 {
+  padding: 0rem 15rem;
+  line-height: 1.6;
+  text-align: center;
+}
+
+.g2-main-div-style {
+  margin: 4rem 0rem;
+}
+
+.g2-main-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 3rem 0rem;
+}
+
+.g2-container {
+  min-width: 700px;
+  padding: 1.5rem;
+  background-color: #fff;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  border: 2.5px solid #000;
+  border-radius: 10px;
+}
+
+.g2-container h2 {
+  font-weight: bold;
+  margin-bottom: 1.2rem;
+  color: #000;
+}
+
+.section h2 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  color: #000;
+}
+
+.section {
+  margin-bottom: 30px;
+}
+
+/* Form Styles */
+.form-group {
+  margin-bottom: 1.5rem;
+}
+
+label {
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+  display: block;
+  color: #000;
+}
+
+input[type="text"],
+input[type="number"],
+input[type="date"] {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #000;
+  box-shadow: 0px 1px 5px 1px rgba(0, 0, 0, 0.1);
+  transition: all 0.2s ease-in-out;
+}
+
+input:focus {
+  border-color: #ff0000 !important;
+  outline: none;
+  box-shadow: 0 0 8px rgba(234, 130, 130, 0.3) !important;
+}
+
+button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 15px 30px;
+  font-size: 1.1rem;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+/* Form Submit Button */
+.btn {
+  padding: 10px 20px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.error-message {
+  color: red;
+  font-size: 0.9rem;
+  margin-top: 5px;
+}
+
+/* G Page Style */
+
+.g-page-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 3rem 0rem;
+}
+
+.g-page-form-container {
+  min-width: 700px;
+  padding: 1.5rem;
+  background-color: #fff;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  border: 2.5px solid #000;
+  border-radius: 10px;
+}
+
+.g-page-form-container h2 {
+  font-weight: bold;
+  margin-bottom: 1.2rem;
+  color: #000;
 }
