--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -74,6 +74,6 @@
       </section>
     </div>
 
-    <%- include('layouts/footer'); -%> <%- include('layouts/scripts'); -%>
+    <%- include('layouts/footer'); -%>
   </body>
 </html>
