--- a/views/g_page.ejs
+++ b/views/g_page.ejs
@@ -48,6 +48,6 @@
       </div>
     </main>
 
-    <%- include('layouts/footer'); -%> <%- include('layouts/scripts'); -%>
+    <%- include('layouts/footer'); -%>
   </body>
 </html>
