--- a/views/login.ejs
+++ b/views/login.ejs
@@ -56,6 +56,6 @@
       </div>
     </main>
 
-    <%- include('layouts/footer'); -%> <%- include('layouts/scripts'); -%>
+    <%- include('layouts/footer'); -%>
   </body>
 </html>
