--- a/views/g2_page.ejs
+++ b/views/g2_page.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- Header -->
   <%- include('layouts/header'); -%>
   <body>
+      <!-- Navbar -->
     <%- include('layouts/navbar'); -%>
 
     <!-- Main Content -->
@@ -170,7 +172,7 @@
       </div>
     </main>
 
-    <!-- Include Footer and Scripts -->
+    <!-- Footer -->
     <%- include('layouts/footer'); -%> <%- include('layouts/scripts'); -%>
   </body>
 </html>
