--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- Header  -->
   <%- include('layouts/header'); -%>
   <body>
+
+    <!-- Navber -->
     <%- include('layouts/navbar'); -%>
 
     <!-- Main Content -->
@@ -56,6 +59,7 @@
       </div>
     </main>
 
+    <!-- Footer -->
     <%- include('layouts/footer'); -%>
   </body>
 </html>
