--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- Header -->
   <%- include('layouts/header'); -%>
   <body>
+    <!-- Navbar -->
     <%- include('layouts/navbar'); -%>
 
     <!-- Main Content -->
@@ -74,6 +76,7 @@
       </section>
     </div>
 
+    <!-- Footer -->
     <%- include('layouts/footer'); -%>
   </body>
 </html>
