--- a/views/g_page.ejs
+++ b/views/g_page.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- Header -->
   <%- include('layouts/header'); -%>
   <body>
+    <!-- Navbar -->
     <%- include('layouts/navbar'); -%>
 
     <!-- Main Content -->
@@ -48,6 +50,7 @@
       </div>
     </main>
 
+    <!-- Footer -->
     <%- include('layouts/footer'); -%>
   </body>
 </html>
