--- a/views/g2_page.ejs
+++ b/views/g2_page.ejs
@@ -28,7 +28,7 @@
           <h2 class="text-center">G2 Test Booking Form</h2>
 
           <!-- G2 Test Booking Form -->
-          <form class="g2-test-form" id="g2Form" action="/g2" method="POST" novalidate>
+          <form class="g2-test-form" id="g2Form" action="/g2" method="POST"  novalidate>
             <!-- Personal Information Section -->
             <div class="section">
               <h2>Personal Information</h2>
@@ -40,7 +40,7 @@
                   type="text"
                   class="form-control"
                   id="firstName"
-                  name="firstname"
+                  name="firstName"
                   placeholder="Enter First Name"
                   required
                 />
@@ -55,7 +55,7 @@
                   type="text"
                   class="form-control"
                   id="lastName"
-                  name="lastname"
+                  name="lastName"
                   placeholder="Enter Last Name"
                   required
                 />
@@ -120,7 +120,7 @@
                   type="text"
                   class="form-control"
                   id="carMake"
-                  name="carMake"
+                  name="make"
                   placeholder="Car Make"
                   required
                 />
@@ -135,7 +135,7 @@
                   type="text"
                   class="form-control"
                   id="carModel"
-                  name="carModel"
+                  name="model"
                   placeholder="Car Model"
                   required
                 />
@@ -150,7 +150,7 @@
                   type="number"
                   class="form-control"
                   id="carYear"
-                  name="carYear"
+                  name="year"
                   placeholder="Car Year"
                   min="1900"
                   max="2024"
