--- a/views/g2_page.ejs
+++ b/views/g2_page.ejs
@@ -41,7 +41,7 @@
                   class="form-control"
                   id="firstName"
                   name="firstName"
-                  placeholder="Enter First Name"
+                  placeholder="John"
                   required
                 />
                 <span id="firstNameError" class="error-message"></span>
@@ -56,7 +56,7 @@
                   class="form-control"
                   id="lastName"
                   name="lastName"
-                  placeholder="Enter Last Name"
+                  placeholder="Doe"
                   required
                 />
                 <span id="lastNameError" class="error-message"></span>
@@ -71,7 +71,7 @@
                   class="form-control"
                   id="licenseNumber"
                   name="licenseNumber"
-                  placeholder="Enter License Number (8 characters)"
+                  placeholder="AB123456"
                   minlength="8"
                   maxlength="8"
                   pattern="^[a-zA-Z0-9]{8}$"
@@ -84,11 +84,11 @@
               <div class="form-group">
                 <label for="age">Age <span class="required">*</span></label>
                 <input
-                  type="number"
+                  type="text"
                   class="form-control"
                   id="age"
                   name="age"
-                  placeholder="Enter Age"
+                  placeholder="25"
                   required
                 />
                 <span id="ageError" class="error-message"></span>
@@ -121,7 +121,7 @@
                   class="form-control"
                   id="carMake"
                   name="make"
-                  placeholder="Car Make"
+                  placeholder="Mercedes-Maybach"
                   required
                 />
                 <span id="carMakeError" class="error-message"></span>
@@ -136,7 +136,7 @@
                   class="form-control"
                   id="carModel"
                   name="model"
-                  placeholder="Car Model"
+                  placeholder="4MATXXX"
                   required
                 />
                 <span id="carModelError" class="error-message"></span>
@@ -147,11 +147,11 @@
                   >Car Year <span class="required">*</span></label
                 >
                 <input
-                  type="number"
+                  type="text"
                   class="form-control"
                   id="carYear"
                   name="year"
-                  placeholder="Car Year"
+                  placeholder="2024"
                   min="1900"
                   max="2024"
                   required
@@ -168,7 +168,7 @@
                   class="form-control"
                   id="plateNumber"
                   name="plateNumber"
-                  placeholder="Car Plate Number"
+                  placeholder="1HGTXXX"
                   required
                 />
                 <span id="plateError" class="error-message"></span>
@@ -177,7 +177,7 @@
 
             <!-- Submit Button -->
             <div class="text-center mt-3">
-              <button type="submit" class="btn btn-primary btn-lg">
+              <button type="submit" class="button">
                 Submit Request
               </button>
             </div>
