--- a/views/g_page.ejs
+++ b/views/g_page.ejs
@@ -42,7 +42,7 @@
 
             <!-- Submit Button -->
             <div class="text-center mt-2">
-              <button type="submit" class="btn btn-primary btn-lg">
+              <button type="submit" class="button">
                 Retrieve Data
               </button>
             </div>
