--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -4,8 +4,14 @@
     name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
   />
-  <meta name="description" content="Welcome to the Drive Test Portal where you can book your G and G2 driving tests easily." />
-  <meta name="keywords" content="Drive Test, G Test, G2 Test, Book Driving Test, Kishan Kumar Das" />
+  <meta
+    name="description"
+    content="Welcome to the Drive Test Portal where you can book your G and G2 driving tests easily."
+  />
+  <meta
+    name="keywords"
+    content="Drive Test, G Test, G2 Test, Book Driving Test, Kishan Kumar Das"
+  />
   <meta name="author" content="Kishan Kumar Das" />
 
   <title><%= title %> - Book Your Driving Test Today</title>
@@ -21,13 +27,7 @@
 
   <!-- Fonts -->
   <link
-    href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic"
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet"
-    type="text/css"
-  />
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
-    rel="stylesheet"
-    type="text/css"
   />
 </head>
