added logo, favicon, updated validation and changed hero image

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,7 +15,7 @@
         <div class="overlay">
           <h1>Welcome to Your Driving Test Portal!</h1>
           <h3>Book your G and G2 driving tests easily.</h3>
-          <a href="/login" class="btn btn-primary">Get Started</a>
+          <a href="/login" class="started-button">Get Started</a>
         </div>
       </section>
       <div class="dashboard-main-div">
@@ -71,8 +71,8 @@
 
       <!-- Call to Action -->
       <section class="call-to-action text-center">
-        <h2>Ready to book your test?</h2>
-        <a href="/login" class="btn btn-success">Book Now</a>
+        <h2 class="mb-5">Ready to book your test?</h2>
+        <a href="/login" class="button">Book Now</a>
       </section>
     </div>
 
