--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,10 +33,10 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url("/images/hero-banner.jpg");
+  background-image: url("/images/new-hero-banner.jpg");
   background-size: cover;
   background-position: center;
-  filter: blur(2px);
+  filter: blur(0.5px);
   z-index: 0;
 }
 
@@ -50,7 +50,7 @@ body {
   color: #fff;
   z-index: 1;
   text-align: center;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.5);
   padding: 20px;
   border-radius: 10px;
 }
@@ -58,10 +58,29 @@ body {
 .overlay h1 {
   font-size: 60px;
   font-weight: 700;
+  margin-bottom: 1rem;
 }
 
 .overlay h3 {
   margin-bottom: 1.5rem;
+  font-weight: 700;
+}
+
+.started-button{
+  background-color: #ff0000;
+  padding: 0.6rem 1rem;
+  border: 2.5px solid #ff0000;
+  border-radius: 8px;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 700;
+  font-size: 18px;
+  transition: all 0.2s ease-in;
+}
+
+.started-button:hover{
+  background-color: transparent;
+  color: #ff0000;
 }
 
 .dashboard-card-div h1 {
