--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -14,6 +14,8 @@
   />
   <meta name="author" content="Kishan Kumar Das" />
 
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
   <title><%= title %> - Book Your Driving Test Today</title>
 
   <!-- Custom CSS -->
