--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -1,13 +1,15 @@
 <style>
   /* Custom CSS for navbar styling */
   .navbar {
-    background-color: #ffffff; 
+    background-color: #ffffff;
     box-shadow: 0 2px 1px rgba(0, 0, 0, 0.1);
     padding: 1rem 2rem;
     /* margin-bottom: 100px; */
   }
 
-  .navbar-brand{
+  .navbar-brand {
+    display: flex;
+    align-items: center;
     font-size: 1.4rem;
     font-weight: 700;
     color: #000000;
@@ -16,7 +18,7 @@
   .navbar .nav-link {
     color: #000000;
     font-size: 1.2rem;
-    font-weight: 700
+    font-weight: 700;
   }
 
   .navbar .nav-link:hover {
@@ -29,11 +31,23 @@
     width: 100%;
     z-index: 1030;
   }
+
+  .navbar-brand img {
+    width: 45px;
+    height: 45px;
+    object-fit: cover;
+    margin-right: 10px;
+  }
 </style>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Book DriveTest</a>
+    <a class="navbar-brand" href="/">
+      <img src="/images/logo.png" alt="logo" />
+      Book DriveTest</a
+    >
     <button
       class="navbar-toggler"
       type="button"
