--- a/views/layouts/scripts.ejs
+++ b/views/layouts/scripts.ejs
@@ -2,4 +2,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- Local JavaScript -->
-<script src="/js/scripts.js"></script>
+<!-- <script src="/js/scripts.js"></script> -->
