Refactor the code and used MVC structure

--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -19,7 +19,7 @@
   <title><%= title %> - Book Your Driving Test Today</title>
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/css/styles.css">
 
   <!-- Bootstrap CSS -->
   <link
