--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <!-- Header -->
-  <%- include('layouts/header'); -%>
+  <%- include('./layouts/header'); -%>
   <body>
     <!-- Navbar -->
-    <%- include('layouts/navbar'); -%>
+    <%- include('./layouts/navbar'); -%>
 
     <!-- Main Content -->
 
